--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "axios": "^0.24.0",
     "gatsby": "^4.5.2",
+    "gatsby-plugin-mdx-source-name": "^1.0.1",
     "gatsby-plugin-sass": "^5.5.0",
+    "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-transformer-remark": "^5.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.48.0"
   }
 }
