--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "axios": "^0.24.0",
     "gatsby": "^4.5.2",
     "gatsby-plugin-mdx-source-name": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sass": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-remark-images": "^6.5.2",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-remark": "^5.5.2",
     "react": "^17.0.1",
