--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-remark-images": "^6.5.2",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-remark": "^5.5.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
